crates/vize_patina/tests/snapshots/next_tick_history__nested-arrow-restores-statement-context-script.snap
---
source: crates/vize_patina/tests/next_tick_history.rs
expression: first_bytes
---
Case {
    id: "nested-arrow-restores-statement-context-script",
    history: "c7c1d7c968a8528a945a57693ce092fd3872fd4d",
    source: "import { nextTick } from 'vue'; const tick = () => { const inner = () => nextTick(); nextTick(); return inner; };",
    filename: "next-tick-nested-arrow-restores-statement-context.ts",
    entry: "script",
    rule: "script/valid-next-tick",
    vue_version: None,
    vapor: None,
    diagnostics: 1,
    fixes: 0,
}
Observation {
    initial: LintResult {
        filename: "next-tick-nested-arrow-restores-statement-context.ts",
        diagnostics: [
            LintDiagnostic {
                rule_name: "script/valid-next-tick",
                severity: Warning,
                message: "The result of this nextTick() call is ignored.",
                start: 85,
                end: 95,
                help: Some(
                    "nextTick() returns a promise that resolves after the DOM updates. `await` it, chain `.then(...)`, or pass a callback (`nextTick(() => {})`); a bare call does nothing useful.",
                ),
                labels: [
                    Label {
                        message: "ignored nextTick() result",
                        start: 85,
                        end: 95,
                    },
                ],
                fix: None,
            },
        ],
        error_count: 0,
        warning_count: 1,
    },
    applications: [],
    unchanged_requery: Some(
        LintResult {
            filename: "next-tick-nested-arrow-restores-statement-context.ts",
            diagnostics: [
                LintDiagnostic {
                    rule_name: "script/valid-next-tick",
                    severity: Warning,
                    message: "The result of this nextTick() call is ignored.",
                    start: 85,
                    end: 95,
                    help: Some(
                        "nextTick() returns a promise that resolves after the DOM updates. `await` it, chain `.then(...)`, or pass a callback (`nextTick(() => {})`); a bare call does nothing useful.",
                    ),
                    labels: [
                        Label {
                            message: "ignored nextTick() result",
                            start: 85,
                            end: 95,
                        },
                    ],
                    fix: None,
                },
            ],
            error_count: 0,
            warning_count: 1,
        },
    ),
}
