crates/vize_patina/tests/snapshots/next_tick_history__valid-arrow-expression-return-script.snap
---
source: crates/vize_patina/tests/next_tick_history.rs
expression: first_bytes
---
Case {
    id: "valid-arrow-expression-return-script",
    history: "c7c1d7c968a8528a945a57693ce092fd3872fd4d",
    source: "import { nextTick as vueNextTick } from 'vue';\nexport const useTick = () => { const nextTick = () => vueNextTick(); return { nextTick }; };",
    filename: "next-tick-valid-arrow-expression-return.ts",
    entry: "script",
    rule: "script/valid-next-tick",
    vue_version: None,
    vapor: None,
    diagnostics: 0,
    fixes: 0,
}
Observation {
    initial: LintResult {
        filename: "next-tick-valid-arrow-expression-return.ts",
        diagnostics: [],
        error_count: 0,
        warning_count: 0,
    },
    applications: [],
    unchanged_requery: Some(
        LintResult {
            filename: "next-tick-valid-arrow-expression-return.ts",
            diagnostics: [],
            error_count: 0,
            warning_count: 0,
        },
    ),
}
