crates/vize_patina/tests/snapshots/next_tick_history__valid-parenthesized-arrow-expression-return-script.snap
---
source: crates/vize_patina/tests/next_tick_history.rs
expression: first_bytes
---
Case {
    id: "valid-parenthesized-arrow-expression-return-script",
    history: "c7c1d7c968a8528a945a57693ce092fd3872fd4d",
    source: "import { nextTick } from 'vue'; const tick = () => (nextTick());",
    filename: "next-tick-valid-parenthesized-arrow-expression-return.ts",
    entry: "script",
    rule: "script/valid-next-tick",
    vue_version: None,
    vapor: None,
    diagnostics: 0,
    fixes: 0,
}
Observation {
    initial: LintResult {
        filename: "next-tick-valid-parenthesized-arrow-expression-return.ts",
        diagnostics: [],
        error_count: 0,
        warning_count: 0,
    },
    applications: [],
    unchanged_requery: Some(
        LintResult {
            filename: "next-tick-valid-parenthesized-arrow-expression-return.ts",
            diagnostics: [],
            error_count: 0,
            warning_count: 0,
        },
    ),
}
